Prevent the pre-session-restore log spam

Avoid using merge_session_throttling_utils::ShouldDelayRequestForProfile() which
spams the logs with warnings and changes the state of the profile, and instead use
the newly added function in this CL to show the local NTP if the session restore
is still pending.

BUG=641191

Review-Url: https://codereview.chromium.org/2537263002
Cr-Commit-Position: refs/heads/master@{#437013}

Former-commit-id: 50ade576fb3292ed44ba4d8e3e1d1a999840da82